[tool.poetry]
name = "slippers"
version = "0.6.2"
description = "Build reusable components in Django without writing a single line of Python."
authors = ["Mitchel Cabuloy <mixxorz@gmail.com>"]
keywords = ["django", "components"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mixxorz/slippers"
repository = "https://github.com/mixxorz/slippers"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]
include = [
    "LICENSE",
    "slippers/static/slippers/main.js",
    "slippers/static/slippers/main.css",
]

[tool.poetry.dependencies]
python = ">=3.8.0"
Django = ">=3.2"
PyYAML = ">=5.4.0"
typeguard = "^2.13.3"
typing-extensions = ">=4.4.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
ipdb = "^0.13.13"
tox = "^4.6.4"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
