[project]
name = "slippers"
version = "0.6.2"
description = "Build reusable components in Django without writing a single line of Python."
authors = [{ name = "Mitchel Cabuloy", email = "mixxorz@gmail.com" }]
requires-python = ">=3.8.0"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "components",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django>=3.2",
    "PyYAML>=5.4.0",
    "typeguard>=2.13.3,<3",
    "typing-extensions>=4.4.0",
]

[project.urls]
Homepage = "https://github.com/mixxorz/slippers"
Repository = "https://github.com/mixxorz/slippers"

[dependency-groups]
dev = [
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "flake8>=3.0.0,<4",
    "ipdb>=0.13.13,<0.14",
    "tox>=4.6.4,<5",
    "twine>=4.0.2,<5",
]

[tool.uv.build-backend]
module-root = ""
source-include = [
    "LICENSE",
    "slippers/static/slippers/main.js",
    "slippers/static/slippers/main.css",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
